<resources>
    <string name="app_name">民生净水</string>
    <string name="about_msg">
Serial Port API sample v1.1\n
\n
This program is the sample application provided with project android-serialport-api.\n
\n
More information and bug report on [http://code.google.com/p/android-serialport-api]\n
\n
Copyright 2010-2011 Cedric Priscal\n
\n
Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at\n
\n
http://www.apache.org/licenses/LICENSE-2.0\n
\n
Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.\n
	</string>
    <string name="error_configuration">Please configure your serial port first.</string>
    <string name="error_security">You do not have read/write permission to the serial
		port.</string>
    <string name="error_unknown">The serial port can not be opened for an unknown
		reason.</string>
    <string name="advertisement_text">民生净水，品质人生</string>
    <string name="default_bg_digital">888888.88</string>
    <string name="free_pay_instruction">本台设备可使用民生宝免费扫码打水</string>
    <string name="black_card_tip">此卡已挂失，如需取水请重新换卡!!</string>
    <string name="ad_picture">广告图片</string>
    <string name="real_time_monitoring">实时水质监控</string>
    <string name="in_water_tds">进水TDS值</string>
    <string name="out_water_tds">出水TDS值</string>
    <string name="zero">0</string>
    <string name="one_hundred_fifty_eight">158</string>
    <string name="TDS_MMP">TDS值(PPM)</string>
    <string name="water_quality">水质</string>
    <string name="zero_to_nine">0~9</string>
    <string name="ten_to_sixty">10~60</string>
    <string name="sixty_to_hundred">60~100</string>
    <string name="hundred_to_threeHundred">100~300</string>
    <string name="more_than_threeHundred">300以上</string>
    <string name="purified_water">纯净水</string>
    <string name="mountain_spring">山泉水、矿泉水</string>
    <string name="clean_water">净化水</string>
    <string name="not_clean_water">未净化水</string>
    <string name="pollution_water">污染水</string>

    <string name="network_tip">当前网络已断开，请稍后或联系客服，或者使用IC卡刷卡购水</string>

</resources>
