<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="@dimen/margin_width200"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/margin_width10"
    android:layout_marginBottom="@dimen/margin_width10"
    android:layout_marginEnd="@dimen/margin_width10"
    android:layout_gravity="bottom|end"
    android:padding="@dimen/margin_width6"
    android:background="@drawable/shape_black_transparent">
    <LinearLayout
        android:id="@+id/id_tds_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/margin_width10"
            android:background="@drawable/shape_blue_layout">
            <TextView
                android:id="@+id/id_tv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_width10"
                android:layout_marginStart="@dimen/margin_width10"
                android:textColor="@color/white"
                android:textSize="@dimen/text_width12"
                android:text="@string/real_time_monitoring"/>
            <TextView
                android:id="@+id/id_tv2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/id_tv1"
                android:layout_marginTop="@dimen/margin_width10"
                android:layout_marginStart="@dimen/margin_width10"
                android:textColor="@color/white"
                android:textSize="@dimen/text_width10"
                android:text="@string/in_water_tds"/>
            <TextView
                android:id="@+id/id_tv3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/id_tv2"
                android:layout_marginTop="@dimen/margin_width10"
                android:layout_marginStart="@dimen/margin_width10"
                android:textColor="@color/white"
                android:textSize="@dimen/text_width10"
                android:text="@string/out_water_tds"/>
            <TextView
                android:id="@+id/id_out_tds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/id_tv2"
                android:layout_toEndOf="@+id/id_tv3"
                android:layout_marginTop="@dimen/margin_width10"
                android:layout_marginStart="@dimen/margin_width10"
                android:textColor="@color/white"
                android:textSize="@dimen/text_width10"
                android:text="@string/zero" />
            <TextView
                android:id="@+id/id_in_tds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/id_tv1"
                android:layout_toEndOf="@+id/id_tv2"
                android:layout_marginTop="@dimen/margin_width10"
                android:layout_marginStart="@dimen/margin_width10"
                android:textColor="@color/white"
                android:textSize="@dimen/text_width10"
                android:text="@string/one_hundred_fifty_eight"/>
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_width10"
            android:background="#00ffffff"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/margin_width20"
                android:gravity="center"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="@dimen/text_width10"
                android:text="@string/TDS_MMP"/>
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/title_tv"/>
            <TextView
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/margin_width20"
                android:gravity="center"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="@dimen/text_width10"
                android:text="@string/water_quality"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/title_tv"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/margin_width20"
                android:gravity="center"
                android:textColor="@color/text_color"
                android:textSize="@dimen/text_width8"
                android:text="@string/zero_to_nine"/>
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/title_tv"/>
            <TextView
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/margin_width20"
                android:gravity="center"
                android:textColor="@color/text_color"
                android:textSize="@dimen/text_width8"
                android:text="@string/purified_water"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/title_tv"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/margin_width20"
                android:gravity="center"
                android:textColor="@color/text_color"
                android:textSize="@dimen/text_width8"
                android:text="@string/ten_to_sixty"/>
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/title_tv"/>
            <TextView
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/margin_width20"
                android:gravity="center"
                android:textColor="@color/text_color"
                android:textSize="@dimen/text_width8"
                android:text="@string/mountain_spring"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/title_tv"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/margin_width20"
                android:gravity="center"
                android:textColor="@color/text_color"
                android:textSize="@dimen/text_width8"
                android:text="@string/sixty_to_hundred"/>
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/title_tv"/>
            <TextView
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/margin_width20"
                android:gravity="center"
                android:textColor="@color/text_color"
                android:textSize="@dimen/text_width8"
                android:text="@string/clean_water"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/title_tv"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/margin_width20"
                android:gravity="center"
                android:textColor="@color/text_color"
                android:textSize="@dimen/text_width8"
                android:text="@string/hundred_to_threeHundred"/>
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/title_tv"/>
            <TextView
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/margin_width20"
                android:gravity="center"
                android:textColor="@color/text_color"
                android:textSize="@dimen/text_width8"
                android:text="@string/not_clean_water"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/title_tv"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/margin_width20"
                android:gravity="center"
                android:textColor="@color/text_color"
                android:textSize="@dimen/text_width8"
                android:text="@string/more_than_threeHundred"/>
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/title_tv"/>
            <TextView
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/margin_width20"
                android:gravity="center"
                android:textColor="@color/text_color"
                android:textSize="@dimen/text_width8"
                android:text="@string/pollution_water"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>